# affinity-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.md.backup  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
affinity_cli/: __init__.py  config.py  installer_discovery.py  main.py  wine.py
affinity_cli/commands/: __init__.py  install.py  list_installers.py  repair.py  report.py  status.py  uninstall.py
affinity_cli/core/: __init__.py  affinity_installer.py  config_loader.py  dependency_manager.py  desktop_integration.py  distro_detector.py  downloader.py  installer_scanner.py  prefix_manager.py  prefix_preparer.py  preflight.py  wine_executor.py  wine_manager.py
affinity_cli/utils/: __init__.py  logger.py
tests/: test_config.py  test_dependency_manager.py  test_discovery.py  test_distro_detector.py  test_installer_scanner.py  test_wine_manager.py
